--- a/index.html
+++ b/index.html
@@ -111,20 +111,20 @@
         </div>
         <div class="row text-center">
           <div class="col-3">
-            <a href="GADGET/index.html"><img src="img/pilihan1.jpg" alt="" /></a>
-            <a href="GADGET/index.html">Koleksi Gadget</a>
+            <a href="#gadget"><img src="img/pilihan1.jpg" alt="" /></a>
+            <a href="#gadget">Koleksi Gadget</a>
           </div>
           <div class="col-3">
-            <a href=""><img src="img/pilihan2.jpg" alt="" /></a>
-            <a href="CASE/case.html">Koleksi Case</a>
+            <a href="#"><img src="img/pilihan2.jpg" alt="" /></a>
+            <a href="#">Koleksi Case</a>
           </div>
           <div class="col-3">
             <a href=""><img src="img/pilihan3.jpg" alt="" /></a>
-            <a href="">Koleksi Pakaian</a>
+            <a href="">Koleksi Fashion</a>
           </div>
           <div class="col-3">
-            <a href=""><img src="img/pilihan4.jpg" alt="" /></a>
-            <a href="">Koleksi Peralatan Rumah</a>
+            <a href="#peralatan"><img src="img/pilihan4.jpg" alt="" /></a>
+            <a href="#peralatan">Koleksi Peralatan Rumah</a>
           </div>
         </div>
       </div>
@@ -198,11 +198,131 @@
               Tipe : IPhone - Micro - Type C <br />
             </p>
           </div>
+          <div class="col-4">
+            <img src="img/gadget - wirles.jpg" alt="" />
+            <p>
+              Charger wirless IOS/Android <br />
+              Rp. 39.900 <br />
+              Tipe : IPhone - Android <br />
+            </p>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- akhir gadget -->
+
+    <!-- case -->
+
+    <section id="case">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <h1>Koleksi Case</h1>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-4">
+            <img src="img/case - a03s.jpg" alt="" />
+            <p>
+              Case Samsung A030S <br />
+              Rp. 22.900 <br />
+              Warna : Hitam - Merah - Biru
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - reno2.jpg" alt="" />
+            <p>
+              Case Oppo Reno 2 <br />
+              Rp. 17.900 <br />
+              Warna : Hitam - Merah - Biru
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - c20.jpg" alt="" />
+            <p>
+              Case realme c20 <br />
+              Rp. 22.900 <br />
+              Warna : Hitam - Putih - Biru - Merah
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - a10.jpg" alt="" />
+            <p>
+              case samsung a10 <br />
+              Rp. 12.900 <br />
+              Warna : Hitam - hijau - Biru - Merah
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - y53s.jpg" alt="" />
+            <p>
+              case vivo y53s 5G <br />
+              Rp. 17.900 <br />
+              Warna : Hitam - Biru - Merah
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - 4x.jpg" alt="" />
+            <p>
+              case xiaomi redmi note 4x <br />
+              Rp. 22.900 <br />
+              Warna : Biru - Merah
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - v21.jpg" alt="" />
+            <p>
+              case vivo v21 <br />
+              Rp. 17.900 <br />
+              Warna : hitam - Biru - Merah
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - reno6.jpg" alt="" />
+            <p>
+              case oppo reno 6 <br />
+              Rp. 12.900 <br />
+              Warna : hitam - Biru - Merah - hijau
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - a22.jpg" alt="" />
+            <p>
+              case samsung a22 <br />
+              Rp. 12.900 <br />
+              Warna : hitam - Biru - Merah - hijau
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - s9.jpg" alt="" />
+            <p>
+              case samsung s9 <br />
+              Rp. 12.900 <br />
+              Warna : hitam - Biru - Merah - hijau
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - c25.jpg" alt="" />
+            <p>
+              case realme c25 <br />
+              Rp. 17.900 <br />
+              Warna : hitam - Biru - Merah
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/case - 10s.jpg" alt="" />
+            <p>
+              case infinix hot 10s <br />
+              Rp. 22.900 <br />
+              Warna : hitam - Biru - Merah
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- akhir case -->
 
     <!-- peralatan rumah -->
     <section id="peralatan">
@@ -284,6 +404,70 @@
               Spray Pembersih Bekas Lem <br />
               Rp. 58.900 <br />
               Tipe : Spray <br />
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/peralatan - karat.jpg" alt="" />
+            <p>
+              Cream Penghilang Karat <br />
+              Rp. 35.900 <br />
+              Tipe : Cream <br />
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/peralatan - galon.jpg" alt="" />
+            <p>
+              Pompa Galon Elektrik <br />
+              Rp. 32.900 <br />
+              Tipe : Pompa Air <br />
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/peralatan - usir.jpg" alt="" />
+            <p>
+              Alat Pengusir Nyamuk & Tikus <br />
+              Rp. 20.900 <br />
+              Tipe : Ultrasonic <br />
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/peralatan - panci.jpg" alt="" />
+            <p>
+              Panci Elektrik Serbaguna <br />
+              Rp. 82.900 <br />
+              Tipe : Panci <br />
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/peralatan - celmek.jpg" alt="" />
+            <p>
+              Celmek Apron Anti Air <br />
+              Rp. 25.900 <br />
+              Warna : Hijau - Pink - Coklat <br />
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/peralatan - vakum.jpg" alt="" />
+            <p>
+              Vakum Cleaner Mobil <br />
+              Rp. 93.900 <br />
+              Tipe : Portable <br />
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/peralatan - uap.jpg" alt="" />
+            <p>
+              Setrika Uap Mini <br />
+              Rp. 125.900 <br />
+              Warna : Hijau <br />
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="img/peralatan - bohlam blu.jpg" alt="" />
+            <p>
+              Bohlam LED Bluetooth <br />
+              Rp. 55.900 <br />
+              Tipe : Lampu <br />
             </p>
           </div>
         </div>
